<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1F1F1F"
        android:gravity="center"
        android:padding="@dimen/fab_margin">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/add_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginLeft="@dimen/fab_margin"
            android:drawableTop="@drawable/ic_plus"
            android:text="@string/add_remove"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginLeft="@dimen/fab_margin"
            android:drawableTop="@drawable/ic_edit"
            android:text="@string/rename"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_toEndOf="@id/fav"
            android:layout_toRightOf="@id/fav"
            android:drawableTop="@drawable/ic_delete"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small" />


    </LinearLayout>
</layout>