<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="favAdapter"
            type="com.task.gogamecontacts.ui.main.adapter.ContactAdapter" />

        <variable
            name="adapter"
            type="com.task.gogamecontacts.ui.main.adapter.MainContactAdapter" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".ui.main.view.MainActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_xlarge"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/search"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="@dimen/fab_margin"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edittext_bg"
                    android:drawableLeft="@drawable/ic_search"
                    android:drawablePadding="20dp"
                    android:gravity="center|start"
                    android:paddingLeft="@dimen/fab_margin"
                    android:textColor="@color/white_80"
                    android:textSize="@dimen/text_size_medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/app_name" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/my_groups_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/fab_margin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/search">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/gp1"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_group_green" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/my_groups"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/fab_margin"
                        android:layout_marginTop="20dp"
                        android:layout_toEndOf="@id/gp1"
                        android:layout_toRightOf="@id/gp1"
                        android:gravity="center"
                        android:text="@string/my_groups"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_medium"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/gp1"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_right" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:id="@+id/v1"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginLeft="@dimen/fab_margin"
                    android:layout_marginRight="@dimen/fab_margin"
                    android:background="@color/white_20"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/my_groups_layout" />

                <LinearLayout
                    android:id="@+id/fav_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/v1">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/fab_margin"
                        android:layout_marginRight="@dimen/fab_margin"
                        android:gravity="center"
                        android:text="@string/favourites"
                        android:textAllCaps="true"
                        android:textColor="@color/white_80"
                        android:textSize="@dimen/text_size_small" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/fav_contacts"
                        setAdapter="@{favAdapter}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="vertical"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/item_contact" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="@dimen/fab_margin"
                        android:layout_marginRight="@dimen/fab_margin"
                        android:background="@color/white_20" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/all_contacts_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/fav_layout">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/fab_margin"
                        android:layout_marginRight="@dimen/fab_margin"
                        android:gravity="center"
                        android:text="@string/all_contacts"
                        android:textAllCaps="true"
                        android:textColor="@color/white_80"
                        android:textSize="@dimen/text_size_small" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/contacts"
                        setAdapter="@{adapter}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/fav_layout"
                        tools:listitem="@layout/item_contact" />

                    <include
                        android:id="@+id/no_data"
                        layout="@layout/layout_no_data"
                        android:layout_width="match_parent"
                        android:layout_height="300dp" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:background="@color/teal_700"
            android:contentDescription=""
            app:srcCompat="@drawable/ic_plus" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>